Fix embedded alignments;

--- a/sass/utilities/_alignments.scss
+++ b/sass/utilities/_alignments.scss
@@ -22,4 +22,8 @@
   @include center-block;
 
   margin-bottom: 1.5em;
+
+  .wp-block-embed__wrapper {
+    display: flex;
+  }
 }
